--- a/app/assets/stylesheets/give_when.scss
+++ b/app/assets/stylesheets/give_when.scss
@@ -15,7 +15,7 @@ $lightblue: #0948bc;
   .give_when__subsection {
     flex: 1;
     color: #1c407b;
-    padding: 30px;
+    padding: 20px;
 
     p {
       font-size: 1.125em;
